--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,13 +26,101 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p class="lead">Today is:</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
       <!-- Timeblocks go here -->
+     
+      <div class="row time-block">
+        <div class="col-md-1 hour">
+            8 AM
+        </div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="row time-block">
+      <div class="col-md-1 hour">
+          9 AM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+  <div class="row time-block">
+    <div class="col-md-1 hour">
+        10 AM
+    </div>
+    <textarea class="col-md-10 description">
+    </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+</div>
+
+  <div class="row time-block">
+    <div class="col-md-1 hour">
+        11 AM
+    </div>
+    <textarea class="col-md-10 description">
+    </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+</div>
+    <div class="row time-block">
+    <div class="col-md-1 hour">
+        12 PM
+    </div>
+    <textarea class="col-md-10 description">
+    </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+</div>
+      <div class="row time-block">
+    <div class="col-md-1 hour">
+        1 PM
+    </div>
+    <textarea class="col-md-10 description">
+    </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+</div>
+      <div class="row time-block">
+    <div class="col-md-1 hour">
+        2 PM
+    </div>
+    <textarea class="col-md-10 description">
+    </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+</div>
+    <div class="row time-block">
+    <div class="col-md-1 hour">
+        3 PM
+    </div>
+    <textarea class="col-md-10 description">
+    </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+</div>
+
+    <div class="row time-block">
+    <div class="col-md-1 hour">
+        4 PM
+    </div>
+    <textarea class="col-md-10 description">
+    </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+</div>
+
+    <div class="row time-block">
+    <div class="col-md-1 hour">
+        5 PM
+    </div>
+    <textarea class="col-md-10 description">
+    </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+</div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
